# la_template_rs

./: Cargo.toml  README.md  makefile
.trunk/: trunk.yaml
crates/cf_fs/: Cargo.toml
crates/cf_fs/src/: fs.rs  lib.rs  memfs_tracer.rs  path_interpreter.rs
crates/cf_fs/tests/: path_interp.rs
crates/common/src/: error_handling.rs  lib.rs  utils.rs  wrapper.rs
crates/la_template_base/: Cargo.toml  README.md
crates/la_template_base/src/: lib.rs  main.rs
crates/la_template_base/tests/: cli.rs
examples/: mp-provision.yml.cc  ssh.yml.cc
la_template_base/: .gitignore  Cargo.toml  makefile
la_template_base/src/: lib.rs  lib_1.rs  lib_refactor.rs  main.rs
la_template_base/src/common/: error_handling.rs  mod.rs  utils.rs  wrapper.rs
la_template_base/tests/: cli.rs  first_sub.json  hello_report.json  hello_report.t.txt
src/: lib.rs  lib_0.rs  main.rs  memfs_tracer.rs  replace_regex.rs  template_fs.rs
src/common/: error_handling.rs
tests/: cli.rs  first_sub.json  first_sub.t.txt  general.rs
tests/configs/: bye_world.t.txt  hello_world.t.txt  hungtr-uofa.json  pegasust-world.json  world.json
