[workspace]
members = [
    "crates/*"
]

[package]
name = "la_template_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }
serde_json = { version = "1.0.82" }
simple-error = { version = "0.2.3" }
log = { version = "0.4.17", features = ["max_level_debug"] }
env_logger = "0.9.0"
itertools = { version = "0.10.3" }
clap = {version="3.2.12", features=["derive"]}
enum_dispatch = "0.3.8"
la_template_base = { version = "*", path = "crates/la_template_base" }
cf_fs = {path="crates/cf_fs"}
common = {path="crates/common"}
regex="1.6.0"
lazy_static="1.4.0"
strfmt="0.1.6"

[features]
default = []
