[package]
name = "cf_fs"
description="Context-free file system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch="*"
common={path="../common"}
simple-error="0.2.3"
regex="1.6.0"
once_cell="*"

[dev-dependencies]
itertools = "0.10.3"
